# voxa

./: .env.example  .gitignore  Makefile  README.md  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a2f1b3c4d5e6_add_provider_keys_and_llm_provider.py  e86c306206fc_initial_schema.py
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  auth.py  billing.py  calls.py  knowledge_bases.py  router.py  settings.py  voice_ws.py
backend/app/core/: cache.py  config.py  database.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/middleware/: audit.py  error_handler.py  request_id.py
backend/app/models/: __init__.py  agent.py  api_key.py  audit_log.py  base.py  call.py  knowledge_base.py  organization.py  provider_key.py  usage.py  user.py
backend/app/rag/: chunker.py  embeddings.py  processor.py  retriever.py
backend/app/schemas/: agent.py  call.py  common.py  knowledge_base.py  organization.py  provider_key.py  user.py
backend/app/services/: agent_service.py  auth_service.py  cache_service.py  call_service.py  crypto_service.py  knowledge_base_service.py  organization_service.py  provider_key_service.py  storage_service.py  usage_service.py  user_service.py
backend/app/voice/: llm.py  pipeline.py  stt.py  tts.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
(+44 files in other folders)
